more subtitle fixes, changed a copy-string, better play-button pos on mobile

--- a/stylesheets/elements.styl
+++ b/stylesheets/elements.styl
@@ -24,6 +24,7 @@ button, a.button
   letter-spacing 2px
   font-weight bold
   box-sizing border-box
+  margin-bottom 10px
 
   &:hover
     background #d2d2b5
