--- a/stylesheets/mobile/handheld.styl
+++ b/stylesheets/mobile/handheld.styl
@@ -84,7 +84,7 @@ html.mobile
         left 15px
 
     .nav
-      bottom 70px
+     
       width 100%
       padding 0
 
